# public-company-rag

./: .env.example  .gitignore  LICENSE  README.md  environment.yml  pyproject.toml
scripts/: chat_rag.py  setup_data.py  test_rag_query.py
src/public_company_rag/: __init__.py  config.py  query.py
