[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "public-company-rag"
version = "1.0.0"
description = "Retrieval Augmented Generation for SEC 10-K filings using Turbopuffer vector search"
authors = [
    {name = "Alex Woolford", email = "alex@woolford.io"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
keywords = ["rag", "llm", "sec", "10-k", "turbopuffer", "embeddings", "vector-search", "financial-data"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Office/Business :: Financial",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    # Vector database
    "turbopuffer>=1.1.0",

    # OpenAI for embeddings and LLM
    "openai>=1.12.0",

    # Configuration management
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "python-dotenv>=1.0.0",

    # Data handling
    "datasets>=2.16.0",  # Hugging Face datasets
    "pandas>=2.0.0",
    "pyarrow>=14.0.0",   # Parquet support

    # CLI and progress
    "tqdm>=4.66.0",
]

[project.optional-dependencies]
# Development dependencies
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
    "black>=23.0.0",
]

[project.urls]
Homepage = "https://github.com/alexwoolford/public-company-rag"
Documentation = "https://github.com/alexwoolford/public-company-rag#readme"
Repository = "https://github.com/alexwoolford/public-company-rag"
Issues = "https://github.com/alexwoolford/public-company-rag/issues"
Dataset = "https://huggingface.co/datasets/alexwoolford/public-company-10k-chunks"

[project.scripts]
pcrag-setup = "public_company_rag.data.setup:main"
pcrag-chat = "public_company_rag.cli.chat:main"
pcrag-test = "public_company_rag.cli.test:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
public_company_rag = ["py.typed"]

[tool.ruff]
line-length = 100
target-version = "py311"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]  # Allow unused imports in __init__.py

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=public_company_rag",
    "--cov-report=term-missing",
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false  # Set to true for stricter typing
ignore_missing_imports = true

[tool.black]
line-length = 100
target-version = ["py311"]
include = '\.pyi?$'
